# Motive

backend/: .env.example  .gitignore  CLAUDE.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8c2d4b0e9a31_add_place_embeddings_and_coverage.py  b58c94f88282_initial_schema.py  d31a7f6c9b20_add_coverage_jobs.py
backend/app/: celery_app.py  config.py  dependencies.py  main.py
backend/app/models/: __init__.py  base.py  coverage.py  hangout.py  place.py  rating.py  user.py
backend/app/routers/: auth.py  hangouts.py
backend/app/schemas/: auth.py  hangout.py  place.py  rating.py  user.py
backend/app/services/: auth.py  embeddings.py  google_places.py  planner.py
backend/app/tasks/: __init__.py  health.py  ingestion.py  planner.py
backend/tests/: conftest.py  test_celery_app.py  test_google_places.py  test_hangouts_api.py  test_ingestion_tasks.py  test_planner.py  test_schema_extensions.py
